# fathom-sparc

./: Cargo.toml  README.md
crates/fathom-cli/: Cargo.toml
crates/fathom-ingest/: Cargo.toml
crates/fathom-narrative-ingest/: Cargo.toml
crates/fathom-narrative-ingest/src/: sec.rs
crates/fathom-sparc-cli/: Cargo.toml
crates/fathom-sparc-cli/src/: main.rs
crates/fathom-sparc-cli/tests/: end_to_end.rs
crates/fathom-sparc-core/: Cargo.toml
crates/fathom-sparc-core/src/: lib.rs
crates/fathom-sparc-ingest/: Cargo.toml
crates/fathom-sparc-ingest/src/: hf.rs  lib.rs  sec.rs
crates/fathom-sparc-suggestors/: Cargo.toml
crates/fathom-sparc-suggestors/src/: invariants.rs  lib.rs  risk_factor_drift.rs  risk_factor_language.rs
crates/fathom-suggestors/: Cargo.toml
crates/fathom-suggestors/src/: lib.rs  risk_factor_drift.rs
policies/: fathom_sparc.cedar
