[workspace]
resolver = "3"
members = [
    "crates/fathom-sparc-core",
    "crates/fathom-sparc-ingest",
    "crates/fathom-sparc-suggestors",
    "crates/fathom-sparc-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/fathom-sparc"
publish = false

[workspace.dependencies]
# Internal
fathom-sparc-core       = { path = "crates/fathom-sparc-core" }
fathom-sparc-ingest     = { path = "crates/fathom-sparc-ingest" }
fathom-sparc-suggestors = { path = "crates/fathom-sparc-suggestors" }

# Converge platform — published on crates.io.
# `converge-runtime` is intentionally not depended on: the name on crates.io
# belongs to an unrelated project, and `converge-kernel` re-exports `Engine`.
converge-kernel   = "3.7.6"
converge-model    = "3.7.6"
converge-pack     = "3.7.6"
converge-storage  = "3.7.6"

# Converge extension — git dep (the `prism` name on crates.io belongs to an
# unrelated chart library; pin via git until/unless it's republished as
# `converge-prism`).
prism = { git = "https://github.com/Reflective-Lab/prism", branch = "main" }

# Organism — formation assembly, published on crates.io
organism-intent    = "1.4.0"
organism-planning  = "1.4.0"
organism-runtime   = "1.4.0"
organism-pack      = "1.4.0"

# Lakehouse / compute — versions aligned with Sail's foundation.
# Run Sail as a service (see compose.yml) when one-box DataFusion isn't enough.
datafusion           = { version = "53.1.0", default-features = false }
arrow                = { version = "58.1.0", features = ["chrono-tz"] }
arrow-flight         = { version = "58.1.0", features = ["flight-sql-experimental"] }
parquet              = "58.1.0"
object_store         = { version = "0.13.2", features = ["aws", "http"] }
iceberg              = "0.6"
iceberg-catalog-rest = "0.6"
iceberg-datafusion   = "0.6"

# Data / ML
polars  = { version = "0.51", features = ["csv", "lazy", "log", "ndarray", "parquet", "rows"] }
burn    = { version = "0.20", features = ["ndarray", "train"] }
ndarray = "0.17"

# HuggingFace dataset access
hf-hub = "0.3"

# Async + utilities
tokio              = { version = "1.48", features = ["full"] }
async-trait        = "0.1"
anyhow             = "1"
thiserror          = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1", features = ["preserve_order"] }
clap               = { version = "4", features = ["derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev
tempfile = "3"
