[workspace]
resolver = "3"
members = [
    "crates/fathom-sparc-core",
    "crates/fathom-sparc-ingest",
    "crates/fathom-sparc-suggestors",
    "crates/fathom-sparc-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/fathom-sparc"
publish = false

[workspace.dependencies]
# Internal
fathom-sparc-core       = { path = "crates/fathom-sparc-core" }
fathom-sparc-ingest     = { path = "crates/fathom-sparc-ingest" }
fathom-sparc-suggestors = { path = "crates/fathom-sparc-suggestors" }

# Converge platform — published on crates.io. Bumped to 3.8.1 (the v3.8 line)
# alongside the Reflective-Lab platform extraction (see migration notes:
# converge-knowledge → mnemos, -analytics → prism, -policy → arbiter,
# -domain → atelier, -provider-adapters → manifold).
converge-kernel   = "3.8.1"
converge-model    = "3.8.1"
converge-pack     = "3.8.1"
converge-storage  = "3.8.1"
# converge-core is re-exported partially through converge-kernel; the Violation
# type used by custom invariants is not in the re-export list, so we depend
# on core directly when authoring invariants.
converge-core     = "3.8.1"

# Converge extensions — git deps because the matching crates.io names are
# already taken by unrelated projects. The Reflective-Lab packages were
# renamed `converge-{name}-{purpose}` on github main precisely to dodge the
# crates.io collision; the *lib* names (used in `use` statements) stay short.
prism = { package = "converge-prism-analytics",  git = "https://github.com/Reflective-Lab/prism",         branch = "main" }
arbiter = { package = "converge-arbiter-policy", git = "https://github.com/Reflective-Lab/arbiter-policy", branch = "main" }

# Constraint solvers (CP-SAT, MIP) as Converge suggestors. Earns its keep
# at portfolio scope (1.7.0+); declared in the catalogue so it's visible.
ferrox = "0.1"

# Organism — formation assembly. Held at 1.4.0 (compatible with converge 3.7.x);
# this catalogue entry is unused by any crate today and will get bumped when
# Organism publishes a 3.8.1-compatible release for the formation slice.
organism-intent    = "1.4.0"
organism-planning  = "1.4.0"
organism-runtime   = "1.4.0"
organism-pack      = "1.4.0"

# Lakehouse / compute — versions aligned with Sail's foundation.
# Run Sail as a service (see compose.yml) when one-box DataFusion isn't enough.
datafusion           = { version = "53.1.0", default-features = false }
arrow                = { version = "58.1.0", features = ["chrono-tz"] }
arrow-flight         = { version = "58.1.0", features = ["flight-sql-experimental"] }
parquet              = "58.1.0"
object_store         = { version = "0.13.2", features = ["aws", "http"] }
iceberg              = "0.6"
iceberg-catalog-rest = "0.6"
iceberg-datafusion   = "0.6"

# Data / ML
polars  = { version = "0.51", features = ["csv", "lazy", "log", "ndarray", "parquet", "rows"] }
burn    = { version = "0.20", features = ["ndarray", "train"] }
ndarray = "0.17"

# HuggingFace dataset access
hf-hub = "0.3"

# Async + utilities
tokio              = { version = "1.48", features = ["full"] }
async-trait        = "0.1"
anyhow             = "1"
thiserror          = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1", features = ["preserve_order"] }
clap               = { version = "4", features = ["derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev
tempfile = "3"
