[workspace]
resolver = "3"
members = [
    "crates/fathom-narrative-core",
    "crates/fathom-narrative-ingest",
    "crates/fathom-narrative-suggestors",
    "crates/fathom-narrative-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/fathom-narrative"
publish = false

[workspace.dependencies]
# Internal
fathom-narrative-core       = { path = "crates/fathom-narrative-core" }
fathom-narrative-ingest     = { path = "crates/fathom-narrative-ingest" }
fathom-narrative-suggestors = { path = "crates/fathom-narrative-suggestors" }

# Converge platform — published on crates.io. Bumped to 3.8.1 (the v3.8 line)
# alongside the Reflective-Lab platform extraction (see migration notes:
# converge-knowledge → mnemos, -analytics → prism, -policy → arbiter,
# -domain → atelier, -provider-adapters → manifold).
converge-kernel   = "3.9.1"
converge-model    = "3.9.1"
converge-pack     = "3.9.1"
converge-storage  = "3.9.1"
# converge-core is re-exported partially through converge-kernel; the Violation
# type used by custom invariants is not in the re-export list, so we depend
# on core directly when authoring invariants.
converge-core     = "3.9.1"
# converge-optimization ships the foundation's pure-Rust solvers — 0-1 Knapsack
# DP, Dijkstra — and the PortfolioSuggestor that wraps Knapsack as a Converge
# Suggestor. Used in the portfolio coverage slice (1.7.0) as the always-on
# solver path; Ferrox HighsMipSuggestor is the optional native-build
# alternative (engine merges by confidence when both are registered).
converge-optimization = "3.9.1"

# Reflective-Lab Converge extensions.
#
# Naming convention: every published Reflective-Lab extension crate is
# prefixed `converge-{ext}-{purpose}` on crates.io to dodge the collisions
# (`prism`, `arbiter`, `arbiter-policy`, `ferrox` etc. are all taken by
# unrelated projects). The *lib* names (used in `use` statements) stay
# short — see each extension's [lib] section. The cargo `package = "..."`
# spelling here is the published-crate name; the bareword on the left
# (`prism`, `arbiter`) is the import name we use in Rust source.
#
# Currently git-dep'd against the Reflective-Lab github main branch because
# the converge-* prefixed names are not yet on crates.io. When they publish,
# each entry collapses to e.g. `prism = "1.0"`.
prism    = { package = "converge-prism-analytics",  git = "https://github.com/Reflective-Lab/prism",            branch = "main" }
arbiter  = { package = "converge-arbiter-policy",   git = "https://github.com/Reflective-Lab/arbiter-policy",   branch = "main" }
# Manifold's HF object store + HTML extract backend live on main as of the
# 2026-05-07 merge. Will switch to a crates.io pin once
# converge-manifold-adapters publishes; for now the git-dep against main
# is the single source of truth.
manifold = { package = "converge-manifold-adapters", git = "https://github.com/Reflective-Lab/manifold-adapters", branch = "main" }
# embassy-sec-edgar — owns the SEC EDGAR contract (User-Agent, rate-limit
# politeness, Item-N section locator, multi-selector heading extractor).
# Same git-dep pattern as manifold because embassy-ports isn't on crates.io
# yet. The `live` feature pulls the HTTP transport.
embassy-sec-edgar = { package = "converge-embassy-sec-edgar", git = "https://github.com/Reflective-Lab/embassy-ports", branch = "main", features = ["live"] }

# Constraint solvers (CP-SAT, MIP) as Converge suggestors. Ferrox earns its
# keep at portfolio scope (1.7.0+) through provable optimality; not yet pulled
# into any crate's build graph.
#
# CP-SAT and MIP require native builds from the sibling Ferrox checkout:
#   cd ~/dev/reflective/stack/mosaic-extensions/ferrox-solvers && make ortools
#   cd ~/dev/reflective/stack/mosaic-extensions/ferrox-solvers && make highs
# Fathom's .cargo/config.toml points FERROX_ORTOOLS_ROOT and FERROX_HIGHS_ROOT
# at those builds for the standard local checkout layout. CI and contributors
# using another layout must set those variables to their native build
# directories.
#
# First-time clone cost: expect a 15-30 minute C++ compile before native
# Ferrox checks can run.
# Published name will be `converge-ferrox-solver` (Cargo.toml will get a
# `package = "..."` line then). For now we hold the catalogue entry as a
# git dep against the Reflective-Lab repo so anyone re-enabling this
# resolves to the right crate, not the unrelated `ferrox 0.1` on crates.io.
ferrox = { package = "converge-ferrox-solver", git = "https://github.com/Reflective-Lab/ferrox-solvers", branch = "main" }

# Organism — formation assembly. Held at 1.4.0 in the catalogue (the
# published 3.7.x-compatible version); not pulled into any crate today.
# Organism 1.5.0 (Converge 3.8.1-compatible) is announced but not on
# crates.io yet — bump when the formation slice (2.0.0) lands.
organism-intent    = "1.4.0"
organism-planning  = "1.4.0"
organism-runtime   = "1.4.0"
organism-pack      = "1.4.0"

# Lakehouse / compute — versions aligned with Sail's foundation.
# Run Sail as a service (see compose.yml) when one-box DataFusion isn't enough.
datafusion           = { version = "53.1.0", default-features = false }
arrow                = { version = "58.1.0", features = ["chrono-tz"] }
arrow-flight         = { version = "58.1.0", features = ["flight-sql-experimental"] }
parquet              = "58.1.0"
object_store         = { version = "0.13.2", features = ["aws", "http"] }
iceberg              = "0.6"
iceberg-catalog-rest = "0.6"
iceberg-datafusion   = "0.6"

# Data / ML
polars  = { version = "0.51", features = ["csv", "lazy", "log", "ndarray", "parquet", "rows"] }
burn    = { version = "0.20", features = ["ndarray", "train"] }
ndarray = "0.17"

# HuggingFace dataset access
hf-hub = "0.3"

# Async + utilities
tokio              = { version = "1.48", features = ["full"] }
async-trait        = "0.1"
anyhow             = "1"
thiserror          = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1", features = ["preserve_order"] }
clap               = { version = "4", features = ["derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev
tempfile = "3"
