[package]
name = "fathom-narrative-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Synthesis layer for Fathom — Narrative: turns embassy-sec-edgar Filings + HuggingFace JSONL into RiskFactorSection."

[features]
# Live SEC EDGAR ingest — delegates the contract (User-Agent, rate-limit
# politeness, Item-N section locator, multi-selector heading extractor) to
# `embassy-sec-edgar`'s `live` feature. The fathom-side code is now thin:
# call embassy's helpers, then synthesize a SPARC `RiskFactorSection`.
sec = [
    "dep:embassy-sec-edgar",
    "dep:tokio",
]
# HuggingFace dataset ingest via manifold's HuggingFaceObjectStore. JSONL-
# shaped datasets (e.g. JanosAudran/financial-reports-sec) only need the
# object store + serde_json; parquet-shaped datasets would add `parquet` +
# `arrow` here in a follow-up.
hf = [
    "dep:manifold",
    "manifold/object-huggingface",
    "dep:object_store",
    "dep:tokio",
    "dep:futures",
]

[dependencies]
fathom-narrative-core.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

embassy-sec-edgar = { workspace = true, optional = true }
manifold = { workspace = true, optional = true }

tokio = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
