[package]
name = "fathom-sparc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Fathom — SPARC CLI: assemble formations and run convergence over filings."

[[bin]]
name = "fathom-sparc"
path = "src/main.rs"

[dependencies]
fathom-sparc-core.workspace = true
fathom-sparc-ingest.workspace = true
fathom-sparc-suggestors.workspace = true

# Converge — engine + context state + types come from the kernel; pack provides
# the Suggestor/ContextKey/Fact types the suggestors are written against.
converge-kernel.workspace = true
converge-pack.workspace = true
# converge-core for FlowAction + AuthorityLevel + FlowPhase used to construct
# the arbiter DecideRequest at the CLI boundary.
converge-core.workspace = true

# arbiter — Cedar policy preflight (the *front* gate of the gate taxonomy).
arbiter.workspace = true

# CLI plumbing
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# NOTE: organism-* crates are declared in `workspace.dependencies` and pulled
# into this crate when formation assembly lands.
