[package]
name = "fathom-sparc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Domain types for Fathom — SPARC: companies, filings, sections, periods."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
