[package]
name = "fathom-sparc-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Ingestion pipeline for Fathom — SPARC: fixture loading at 1.0; HuggingFace → DataFusion → Iceberg materialisation lands in 1.x."

[dependencies]
fathom-sparc-core.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# NOTE: lakehouse deps (datafusion, arrow, parquet, object_store, iceberg,
# hf-hub) are declared in `workspace.dependencies` as the architectural
# catalogue. They get pulled into this crate's build graph when the
# materialisation pipeline lands — not before, to keep build times sane and
# avoid the iceberg-datafusion 0.6 ↔ datafusion 53 mismatch on a path that
# doesn't yet need them.
