[package]
name = "fathom-sparc-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Ingestion pipeline for Fathom — SPARC: fixture loader + SEC EDGAR scraper + HuggingFace dataset reader."

[features]
# Live SEC EDGAR ingest via manifold's HttpFetchProvider + ScraperHtmlBackend.
sec = [
    "dep:manifold",
    "manifold/fetch",
    "manifold/extract",
    "dep:tokio",
]
# HuggingFace dataset ingest via manifold's HuggingFaceObjectStore +
# the parquet crate. Pulls native object_store + parquet readers.
hf = [
    "dep:manifold",
    "manifold/object-huggingface",
    "dep:parquet",
    "dep:arrow",
    "dep:object_store",
    "dep:tokio",
    "dep:bytes",
    "dep:futures",
]

[dependencies]
fathom-sparc-core.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

manifold = { workspace = true, optional = true }

tokio = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
arrow = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
