[package]
name = "fathom-suggestors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Converge suggestors that query Fathom's Iceberg lakehouse and propose facts."

[dependencies]
fathom-core.workspace = true

# Converge contracts
converge-pack.workspace = true

# Async + utilities
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# NOTE: lakehouse (datafusion/arrow/iceberg/iceberg-datafusion), ML (burn,
# ndarray, polars), and Prism are declared in `workspace.dependencies` and
# pulled in per-suggestor when needed. Keeping them out of the default build
# graph avoids native-library link conflicts (liblzma in burn vs. xz2 in
# datafusion) and the iceberg-datafusion 0.6 / datafusion 53 mismatch.
